进行中的步骤器步骤字体不加粗

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -473,3 +473,7 @@ el-button {
 .el-input-number.is-controls-right .el-input__inner {
     padding-left: 8px;
 }
+
+.el-step__title.is-process {
+    font-weight: unset;
+}
