添加数字输入框必填校验机制

--- a/components/vue/element/tnxel-theme.css
+++ b/components/vue/element/tnxel-theme.css
@@ -111,6 +111,7 @@
 .border-danger,
 .theme-danger .el-checkbox__input.is-focus .el-checkbox__inner,
 .theme-danger .el-input__inner:focus,
+.is-error .el-input__inner,
 .theme-success .is-error .el-input__inner:focus,
 .theme-warning .is-error .el-input__inner:focus {
     border-color: #F56C6C !important;
