--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -542,6 +542,21 @@ el-button {
     font-size: 1rem;
 }
 
+.el-upload-list--picture-card .el-upload-list__item-uploading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    color: #fff;
+    opacity: 0.2;
+    background-color: rgba(0, 0, 0, .5);
+}
+
 .el-form-item__content .el-upload__tip {
     line-height: 1;
     margin-top: 0;
