--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -557,8 +557,8 @@ span.el-tooltip {
     justify-content: center;
     font-size: 1rem;
     color: #fff;
-    opacity: 0.2;
-    background-color: rgba(0, 0, 0, .5);
+    opacity: 0.5;
+    background-color: #000000;
 }
 
 .el-form-item__content .el-upload__tip {
