--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -71,6 +71,10 @@ el-header a img,
     left: 3px;
 }
 
+.el-dropdown-menu__item .el-badge__content {
+    margin-top: 7px;
+}
+
 .el-divider__text, .el-link {
     font-weight: unset;
     font-size: unset;
