--- a/components/bootstrap/base-5.0.0.css
+++ b/components/bootstrap/base-5.0.0.css
@@ -1428,6 +1428,12 @@
     }
 }
 
+.clearfix::after {
+    display: block;
+    clear: both;
+    content: "";
+}
+
 .fixed-top {
     position: fixed;
     top: 0;
