修正栅格宽度无法刚好凑够一行的问题

--- a/components/bootstrap/base-5.0.0.css
+++ b/components/bootstrap/base-5.0.0.css
@@ -11,6 +11,12 @@
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 [hidden] {
     display: none !important;
 }
