文本按钮的字体大小修改为继承

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -267,6 +267,10 @@ el-button {
     margin-left: 5px;
 }
 
+.el-button--text {
+    font-size: inherit;
+}
+
 .el-alert {
     width: unset;
     margin-bottom: 1rem;
